# termia

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  run_termia.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: README.ca.md  README.es.md  REGRESSION_CHECKS.md
scripts/: install_dependencies.sh  install_desktop.sh  uninstall_desktop.sh
src/termia/: __init__.py  __main__.py  app.py  config_actions.py  connection_dialogs.py  constants.py  i18n.py  main_menu.py  models.py  preferences.py  statistics_utils.py  statistics_view.py  stores.py  styles.py  tabs.py  terminal_sessions.py
