[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "termia"
version = "0.1.0"
description = "GTK SSH connection manager with embedded terminals"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["PyYAML>=6.0"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
]

[project.scripts]
termia = "termia.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
termia = ["assets/*"]
